@@ -7,6 +7,7 @@ Enhancements
 - generic version configuration and dependency verification
 - Debug switch, activatable by -Ddebug=true
 - Resource monitoring mechanism
+- new methods TimeUtil.firstDayOfMonth() and lastDayOfMonth()
 
 
 Bug fixes (find the tracker at http://sourceforge.net/tracker/?group_id=222964&atid=1057386)
